# water-value-database

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: 01_Screening_clean.csv  02_Classification_clean.csv  03_WaterValue.csv  water_value_database.db  water_value_database.xlsx
figures/: analytical_charts_report.txt  completeness_heatmap_report.txt  fig_analytical_charts_captions.txt  fig_completeness_heatmap_caption.txt  summary_tables_report.txt
scripts/: 01_summary_tables.py  02_completeness_heatmap.py  03_analytical_charts.py  04_run_pipeline.py
tables/: all_tables_formatted.txt  table_1_classification.csv  table_2_methods.csv  table_3_regions.csv  table_4_years.csv  table_5_wv_summary.csv  table_6_wv_purpose.csv
